main.output
State 26 conflicts: 2 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: StatementList

    2 StatementList: Statement
    3              | Statement StatementList

    4 Statement: PrintStmt
    5          | AssignStmt
    6          | IfStmt
    7          | SortStmt
    8          | IncrStmt SEMICOLON

    9 PrintStmt: PRINT LPAREN STRING_LITERAL RPAREN SEMICOLON
   10          | PRINT LPAREN Expression RPAREN SEMICOLON

   11 AssignStmt: IDENTIFIER ASSIGN Expression SEMICOLON

   12 IfStmt: IF LPAREN Condition RPAREN LBRACE StatementList RBRACE

   13 SortStmt: SORT LPAREN Array RPAREN SEMICOLON

   14 Expression: Term
   15           | Expression PLUS Term
   16           | Expression MINUS Term
   17           | Expression MULTIPLY Term
   18           | Expression DIVIDE Term

   19 Term: Factor
   20     | Term MULTIPLY Factor
   21     | Term DIVIDE Factor

   22 Factor: NUMBER
   23       | IDENTIFIER
   24       | LPAREN Expression RPAREN

   25 Condition: Expression LT Expression
   26          | Expression GT Expression
   27          | Expression EQ Expression
   28          | Expression NE Expression

   29 IncrStmt: IDENTIFIER INCR
   30         | IDENTIFIER DECR

   31 Array: LBRACKET NumberList RBRACKET

   32 NumberList: NUMBER
   33           | NUMBER COMMA NumberList


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUMBER <num> (258) 22 32 33
    IDENTIFIER <str> (259) 11 23 29 30
    STRING_LITERAL <str> (260) 9
    PRINT (261) 9 10
    IF (262) 12
    SORT (263) 13
    ASSIGN (264) 11
    PLUS (265) 15
    MINUS (266) 16
    MULTIPLY (267) 17 20
    DIVIDE (268) 18 21
    LPAREN (269) 9 10 12 13 24
    RPAREN (270) 9 10 12 13 24
    LBRACE (271) 12
    RBRACE (272) 12
    SEMICOLON (273) 8 9 10 11 13
    COMMA (274) 33
    LBRACKET (275) 31
    RBRACKET (276) 31
    LT (277) 25
    GT (278) 26
    EQ (279) 27
    NE (280) 28
    INCR (281) 29
    DECR (282) 30


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    Program (29)
        on left: 1
        on right: 0
    StatementList (30)
        on left: 2 3
        on right: 1 3 12
    Statement (31)
        on left: 4 5 6 7 8
        on right: 2 3
    PrintStmt (32)
        on left: 9 10
        on right: 4
    AssignStmt (33)
        on left: 11
        on right: 5
    IfStmt (34)
        on left: 12
        on right: 6
    SortStmt (35)
        on left: 13
        on right: 7
    Expression <num> (36)
        on left: 14 15 16 17 18
        on right: 10 11 15 16 17 18 24 25 26 27 28
    Term <num> (37)
        on left: 19 20 21
        on right: 14 15 16 17 18 20 21
    Factor <num> (38)
        on left: 22 23 24
        on right: 19 20 21
    Condition <num> (39)
        on left: 25 26 27 28
        on right: 12
    IncrStmt (40)
        on left: 29 30
        on right: 8
    Array (41)
        on left: 31
        on right: 13
    NumberList (42)
        on left: 32 33
        on right: 31 33


State 0

    0 $accept: • Program $end

    IDENTIFIER  shift, and go to state 1
    PRINT       shift, and go to state 2
    IF          shift, and go to state 3
    SORT        shift, and go to state 4

    Program        go to state 5
    StatementList  go to state 6
    Statement      go to state 7
    PrintStmt      go to state 8
    AssignStmt     go to state 9
    IfStmt         go to state 10
    SortStmt       go to state 11
    IncrStmt       go to state 12


State 1

   11 AssignStmt: IDENTIFIER • ASSIGN Expression SEMICOLON
   29 IncrStmt: IDENTIFIER • INCR
   30         | IDENTIFIER • DECR

    ASSIGN  shift, and go to state 13
    INCR    shift, and go to state 14
    DECR    shift, and go to state 15


State 2

    9 PrintStmt: PRINT • LPAREN STRING_LITERAL RPAREN SEMICOLON
   10          | PRINT • LPAREN Expression RPAREN SEMICOLON

    LPAREN  shift, and go to state 16


State 3

   12 IfStmt: IF • LPAREN Condition RPAREN LBRACE StatementList RBRACE

    LPAREN  shift, and go to state 17


State 4

   13 SortStmt: SORT • LPAREN Array RPAREN SEMICOLON

    LPAREN  shift, and go to state 18


State 5

    0 $accept: Program • $end

    $end  shift, and go to state 19


State 6

    1 Program: StatementList •

    $default  reduce using rule 1 (Program)


State 7

    2 StatementList: Statement •
    3              | Statement • StatementList

    IDENTIFIER  shift, and go to state 1
    PRINT       shift, and go to state 2
    IF          shift, and go to state 3
    SORT        shift, and go to state 4

    $default  reduce using rule 2 (StatementList)

    StatementList  go to state 20
    Statement      go to state 7
    PrintStmt      go to state 8
    AssignStmt     go to state 9
    IfStmt         go to state 10
    SortStmt       go to state 11
    IncrStmt       go to state 12


State 8

    4 Statement: PrintStmt •

    $default  reduce using rule 4 (Statement)


State 9

    5 Statement: AssignStmt •

    $default  reduce using rule 5 (Statement)


State 10

    6 Statement: IfStmt •

    $default  reduce using rule 6 (Statement)


State 11

    7 Statement: SortStmt •

    $default  reduce using rule 7 (Statement)


State 12

    8 Statement: IncrStmt • SEMICOLON

    SEMICOLON  shift, and go to state 21


State 13

   11 AssignStmt: IDENTIFIER ASSIGN • Expression SEMICOLON

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    LPAREN      shift, and go to state 24

    Expression  go to state 25
    Term        go to state 26
    Factor      go to state 27


State 14

   29 IncrStmt: IDENTIFIER INCR •

    $default  reduce using rule 29 (IncrStmt)


State 15

   30 IncrStmt: IDENTIFIER DECR •

    $default  reduce using rule 30 (IncrStmt)


State 16

    9 PrintStmt: PRINT LPAREN • STRING_LITERAL RPAREN SEMICOLON
   10          | PRINT LPAREN • Expression RPAREN SEMICOLON

    NUMBER          shift, and go to state 22
    IDENTIFIER      shift, and go to state 23
    STRING_LITERAL  shift, and go to state 28
    LPAREN          shift, and go to state 24

    Expression  go to state 29
    Term        go to state 26
    Factor      go to state 27


State 17

   12 IfStmt: IF LPAREN • Condition RPAREN LBRACE StatementList RBRACE

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    LPAREN      shift, and go to state 24

    Expression  go to state 30
    Term        go to state 26
    Factor      go to state 27
    Condition   go to state 31


State 18

   13 SortStmt: SORT LPAREN • Array RPAREN SEMICOLON

    LBRACKET  shift, and go to state 32

    Array  go to state 33


State 19

    0 $accept: Program $end •

    $default  accept


State 20

    3 StatementList: Statement StatementList •

    $default  reduce using rule 3 (StatementList)


State 21

    8 Statement: IncrStmt SEMICOLON •

    $default  reduce using rule 8 (Statement)


State 22

   22 Factor: NUMBER •

    $default  reduce using rule 22 (Factor)


State 23

   23 Factor: IDENTIFIER •

    $default  reduce using rule 23 (Factor)


State 24

   24 Factor: LPAREN • Expression RPAREN

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    LPAREN      shift, and go to state 24

    Expression  go to state 34
    Term        go to state 26
    Factor      go to state 27


State 25

   11 AssignStmt: IDENTIFIER ASSIGN Expression • SEMICOLON
   15 Expression: Expression • PLUS Term
   16           | Expression • MINUS Term
   17           | Expression • MULTIPLY Term
   18           | Expression • DIVIDE Term

    PLUS       shift, and go to state 35
    MINUS      shift, and go to state 36
    MULTIPLY   shift, and go to state 37
    DIVIDE     shift, and go to state 38
    SEMICOLON  shift, and go to state 39


State 26

   14 Expression: Term •
   20 Term: Term • MULTIPLY Factor
   21     | Term • DIVIDE Factor

    MULTIPLY  shift, and go to state 40
    DIVIDE    shift, and go to state 41

    MULTIPLY  [reduce using rule 14 (Expression)]
    DIVIDE    [reduce using rule 14 (Expression)]
    $default  reduce using rule 14 (Expression)


State 27

   19 Term: Factor •

    $default  reduce using rule 19 (Term)


State 28

    9 PrintStmt: PRINT LPAREN STRING_LITERAL • RPAREN SEMICOLON

    RPAREN  shift, and go to state 42


State 29

   10 PrintStmt: PRINT LPAREN Expression • RPAREN SEMICOLON
   15 Expression: Expression • PLUS Term
   16           | Expression • MINUS Term
   17           | Expression • MULTIPLY Term
   18           | Expression • DIVIDE Term

    PLUS      shift, and go to state 35
    MINUS     shift, and go to state 36
    MULTIPLY  shift, and go to state 37
    DIVIDE    shift, and go to state 38
    RPAREN    shift, and go to state 43


State 30

   15 Expression: Expression • PLUS Term
   16           | Expression • MINUS Term
   17           | Expression • MULTIPLY Term
   18           | Expression • DIVIDE Term
   25 Condition: Expression • LT Expression
   26          | Expression • GT Expression
   27          | Expression • EQ Expression
   28          | Expression • NE Expression

    PLUS      shift, and go to state 35
    MINUS     shift, and go to state 36
    MULTIPLY  shift, and go to state 37
    DIVIDE    shift, and go to state 38
    LT        shift, and go to state 44
    GT        shift, and go to state 45
    EQ        shift, and go to state 46
    NE        shift, and go to state 47


State 31

   12 IfStmt: IF LPAREN Condition • RPAREN LBRACE StatementList RBRACE

    RPAREN  shift, and go to state 48


State 32

   31 Array: LBRACKET • NumberList RBRACKET

    NUMBER  shift, and go to state 49

    NumberList  go to state 50


State 33

   13 SortStmt: SORT LPAREN Array • RPAREN SEMICOLON

    RPAREN  shift, and go to state 51


State 34

   15 Expression: Expression • PLUS Term
   16           | Expression • MINUS Term
   17           | Expression • MULTIPLY Term
   18           | Expression • DIVIDE Term
   24 Factor: LPAREN Expression • RPAREN

    PLUS      shift, and go to state 35
    MINUS     shift, and go to state 36
    MULTIPLY  shift, and go to state 37
    DIVIDE    shift, and go to state 38
    RPAREN    shift, and go to state 52


State 35

   15 Expression: Expression PLUS • Term

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    LPAREN      shift, and go to state 24

    Term    go to state 53
    Factor  go to state 27


State 36

   16 Expression: Expression MINUS • Term

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    LPAREN      shift, and go to state 24

    Term    go to state 54
    Factor  go to state 27


State 37

   17 Expression: Expression MULTIPLY • Term

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    LPAREN      shift, and go to state 24

    Term    go to state 55
    Factor  go to state 27


State 38

   18 Expression: Expression DIVIDE • Term

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    LPAREN      shift, and go to state 24

    Term    go to state 56
    Factor  go to state 27


State 39

   11 AssignStmt: IDENTIFIER ASSIGN Expression SEMICOLON •

    $default  reduce using rule 11 (AssignStmt)


State 40

   20 Term: Term MULTIPLY • Factor

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    LPAREN      shift, and go to state 24

    Factor  go to state 57


State 41

   21 Term: Term DIVIDE • Factor

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    LPAREN      shift, and go to state 24

    Factor  go to state 58


State 42

    9 PrintStmt: PRINT LPAREN STRING_LITERAL RPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 59


State 43

   10 PrintStmt: PRINT LPAREN Expression RPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 60


State 44

   25 Condition: Expression LT • Expression

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    LPAREN      shift, and go to state 24

    Expression  go to state 61
    Term        go to state 26
    Factor      go to state 27


State 45

   26 Condition: Expression GT • Expression

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    LPAREN      shift, and go to state 24

    Expression  go to state 62
    Term        go to state 26
    Factor      go to state 27


State 46

   27 Condition: Expression EQ • Expression

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    LPAREN      shift, and go to state 24

    Expression  go to state 63
    Term        go to state 26
    Factor      go to state 27


State 47

   28 Condition: Expression NE • Expression

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    LPAREN      shift, and go to state 24

    Expression  go to state 64
    Term        go to state 26
    Factor      go to state 27


State 48

   12 IfStmt: IF LPAREN Condition RPAREN • LBRACE StatementList RBRACE

    LBRACE  shift, and go to state 65


State 49

   32 NumberList: NUMBER •
   33           | NUMBER • COMMA NumberList

    COMMA  shift, and go to state 66

    $default  reduce using rule 32 (NumberList)


State 50

   31 Array: LBRACKET NumberList • RBRACKET

    RBRACKET  shift, and go to state 67


State 51

   13 SortStmt: SORT LPAREN Array RPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 68


State 52

   24 Factor: LPAREN Expression RPAREN •

    $default  reduce using rule 24 (Factor)


State 53

   15 Expression: Expression PLUS Term •
   20 Term: Term • MULTIPLY Factor
   21     | Term • DIVIDE Factor

    MULTIPLY  shift, and go to state 40
    DIVIDE    shift, and go to state 41

    $default  reduce using rule 15 (Expression)


State 54

   16 Expression: Expression MINUS Term •
   20 Term: Term • MULTIPLY Factor
   21     | Term • DIVIDE Factor

    MULTIPLY  shift, and go to state 40
    DIVIDE    shift, and go to state 41

    $default  reduce using rule 16 (Expression)


State 55

   17 Expression: Expression MULTIPLY Term •
   20 Term: Term • MULTIPLY Factor
   21     | Term • DIVIDE Factor

    $default  reduce using rule 17 (Expression)


State 56

   18 Expression: Expression DIVIDE Term •
   20 Term: Term • MULTIPLY Factor
   21     | Term • DIVIDE Factor

    $default  reduce using rule 18 (Expression)


State 57

   20 Term: Term MULTIPLY Factor •

    $default  reduce using rule 20 (Term)


State 58

   21 Term: Term DIVIDE Factor •

    $default  reduce using rule 21 (Term)


State 59

    9 PrintStmt: PRINT LPAREN STRING_LITERAL RPAREN SEMICOLON •

    $default  reduce using rule 9 (PrintStmt)


State 60

   10 PrintStmt: PRINT LPAREN Expression RPAREN SEMICOLON •

    $default  reduce using rule 10 (PrintStmt)


State 61

   15 Expression: Expression • PLUS Term
   16           | Expression • MINUS Term
   17           | Expression • MULTIPLY Term
   18           | Expression • DIVIDE Term
   25 Condition: Expression LT Expression •

    PLUS      shift, and go to state 35
    MINUS     shift, and go to state 36
    MULTIPLY  shift, and go to state 37
    DIVIDE    shift, and go to state 38

    $default  reduce using rule 25 (Condition)


State 62

   15 Expression: Expression • PLUS Term
   16           | Expression • MINUS Term
   17           | Expression • MULTIPLY Term
   18           | Expression • DIVIDE Term
   26 Condition: Expression GT Expression •

    PLUS      shift, and go to state 35
    MINUS     shift, and go to state 36
    MULTIPLY  shift, and go to state 37
    DIVIDE    shift, and go to state 38

    $default  reduce using rule 26 (Condition)


State 63

   15 Expression: Expression • PLUS Term
   16           | Expression • MINUS Term
   17           | Expression • MULTIPLY Term
   18           | Expression • DIVIDE Term
   27 Condition: Expression EQ Expression •

    PLUS      shift, and go to state 35
    MINUS     shift, and go to state 36
    MULTIPLY  shift, and go to state 37
    DIVIDE    shift, and go to state 38

    $default  reduce using rule 27 (Condition)


State 64

   15 Expression: Expression • PLUS Term
   16           | Expression • MINUS Term
   17           | Expression • MULTIPLY Term
   18           | Expression • DIVIDE Term
   28 Condition: Expression NE Expression •

    PLUS      shift, and go to state 35
    MINUS     shift, and go to state 36
    MULTIPLY  shift, and go to state 37
    DIVIDE    shift, and go to state 38

    $default  reduce using rule 28 (Condition)


State 65

   12 IfStmt: IF LPAREN Condition RPAREN LBRACE • StatementList RBRACE

    IDENTIFIER  shift, and go to state 1
    PRINT       shift, and go to state 2
    IF          shift, and go to state 3
    SORT        shift, and go to state 4

    StatementList  go to state 69
    Statement      go to state 7
    PrintStmt      go to state 8
    AssignStmt     go to state 9
    IfStmt         go to state 10
    SortStmt       go to state 11
    IncrStmt       go to state 12


State 66

   33 NumberList: NUMBER COMMA • NumberList

    NUMBER  shift, and go to state 49

    NumberList  go to state 70


State 67

   31 Array: LBRACKET NumberList RBRACKET •

    $default  reduce using rule 31 (Array)


State 68

   13 SortStmt: SORT LPAREN Array RPAREN SEMICOLON •

    $default  reduce using rule 13 (SortStmt)


State 69

   12 IfStmt: IF LPAREN Condition RPAREN LBRACE StatementList • RBRACE

    RBRACE  shift, and go to state 71


State 70

   33 NumberList: NUMBER COMMA NumberList •

    $default  reduce using rule 33 (NumberList)


State 71

   12 IfStmt: IF LPAREN Condition RPAREN LBRACE StatementList RBRACE •

    $default  reduce using rule 12 (IfStmt)
